# Vehicle-Insurance-Data-Pipeline

./: .dockerignore  .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
src/cloud_storage/: aws_storage.py
src/configuration/: aws_connection.py
src/constants/: __init__.py
